--- a/client/pages/paginaExemplo1/exemplo1.html
+++ b/client/pages/paginaExemplo1/exemplo1.html
@@ -24,6 +24,7 @@
 			</div>
 
 			<button type="submit" class="btn btn-default right-align">Submit</button>
+			<button type="button" class="btn btn-default right-align" click.delegate="openPopUp()" >Open Popup</button>
 		</div>
 	</form>
 
